Navigate Back closes keyboard if open first, before closing folder

Bug: 878163
Change-Id: I3e01dacba1cd86753b996d0a55aeefe878dc37f6
Reviewed-on: https://chromium-review.googlesource.com/1213708
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589749}
Former-commit-id: db6e880b79eed205babfcb2f5d0d5147f441afb4